--- a/en/schedule.html
+++ b/en/schedule.html
@@ -148,7 +148,7 @@
                 During the Plurinational Bayes Congress 2023 it was proposed as an objective to strengthen the offer of training in research and/or application of Bayesian inference, through the development of workshops taught by specialists from our region, giving rise to the creation of the Plurinational Bayes School-Congress 2024.
                 The Plurinational Bayes School-Congress 2024 will be held at the National University of Salta, Argentina.
                 During 3 days (Tuesday 6 to Thursday 8) we will share various activities, including several practical workshops at all levels, exhibitions, panel discussions, poster sessions, among others.
-                On Friday we will carry out tourist activities in the city of Salta.
+                On Friday morning we will carry out co-working activities and in the afternoon social activities in the city of Salta.
                 <!--Registra t propuesta para la Escuela-Congreso Bayes Plurinacional 2024 <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html"><b>aquí</b></a>.
                 Tenés tiempo hasta el 30 de abril.
                 Para proponer eventos virtuales, acceda de forma permanente al siguiente <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html">formulario</a>.-->
@@ -177,16 +177,33 @@
                   <th style="text-align: center;" class="vertical">Name</th>
                   <th style="text-align: center;" class="vertical">Responsible</th>
               </tr>
+              <table align="center">
               <tr>
-                  <td style="text-align: center;" class="vertical">Groups 1</td>
+                  <th style="text-align: center;" class="vertical">Actividad</th>
+                  <th style="text-align: center;" class="vertical">Martes 6</th>
+                  <th style="text-align: center;" class="vertical">Miércoles 7</th>
+                  <th style="text-align: center;" class="vertical">Jueves 8</th>
+                  <th style="text-align: center;" class="vertical">Nombre</th>
+                  <th style="text-align: center;" class="vertical">Responsable</th>
+              </tr>
+              <tr>
+                  <td style="text-align: center;" class="vertical">Acreditación</td>
+                  <td style="text-align: center;">8:30 - 9:00</td>
+                  <td style="text-align: center;">-</td>
+                  <td style="text-align: center;">-</td>
+                  <td style="text-align: center;">Acreditación y bienvenida.</td>
+                  <td style="text-align: center;">Bayes Plurinacional</td>
+              </tr>
+              <tr>
+                  <td style="text-align: center;" class="vertical">Grupos 1</td>
                   <td style="text-align: center;">9:00 - 9:30</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
-                  <td style="text-align: center;">"Welcome"</td>
-                  <td style="text-align: center;">Random’ groups of 6</td>
+                  <td style="text-align: center;">Conversación: "Historia, motivaciones y proyectos"</td>
+                  <td style="text-align: center;">Grupos de 6 al "azar"</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Workshop 1</td>
+                  <td style="text-align: center;" class="vertical">Taller 1</td>
                   <td style="text-align: center;">9:30 - 11:00</td>
                   <td style="text-align: center;">11:30 - 13:00</td>
                   <td style="text-align: center;">14:30 - 16:00</td>
@@ -194,7 +211,7 @@
                   <td style="text-align: center;">Gustavo Landfried</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Workshop 2</td>
+                  <td style="text-align: center;" class="vertical">Taller 2</td>
                   <td style="text-align: center;">15:30 (break) 17:15</td>
                   <td style="text-align: center;">15:30 (break) 17:15</td>
                   <td style="text-align: center;">09:00 - 10:30</td>
@@ -202,15 +219,15 @@
                   <td style="text-align: center;">Tomás Capretto</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Short workshop 1</td>
+                  <td style="text-align: center;" class="vertical">Taller Corto 1</td>
                   <td style="text-align: center;">11:45 - 13:00</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
-                  <td style="text-align: center;">Modelos de distribución de especies</td>
+                  <td style="text-align: center;">Modelos de Distribución de especies</td>
                   <td style="text-align: center;">Camila Neder</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Short workshop 2</td>
+                  <td style="text-align: center;" class="vertical">Taller Corto 2</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">10:15 - 11:30</td>
                   <td style="text-align: center;">-</td>
@@ -218,7 +235,7 @@
                   <td style="text-align: center;">Leila Sofía Asplanato</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Short workshop 3</td>
+                  <td style="text-align: center;" class="vertical">Taller Corto 3</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">11:45 - 13:00</td>
@@ -226,7 +243,7 @@
                   <td style="text-align: center;">Enrique ter Horst</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk with code</td>
+                  <td style="text-align: center;" class="vertical">Charla con código</td>
                   <td style="text-align: center;">11:00 - 11:45</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
@@ -234,7 +251,7 @@
                   <td style="text-align: center;">Gabriel Alzamendi</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk with code</td>
+                  <td style="text-align: center;" class="vertical">Charla con código</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">9:00 - 9:45</td>
                   <td style="text-align: center;">-</td>
@@ -242,15 +259,15 @@
                   <td style="text-align: center;">Juan Bekios Calfa</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk with code</td>
+                  <td style="text-align: center;" class="vertical">Charla con código</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
-                  <td style="text-align: center;">10:30 - 11:45</td>
+                  <td style="text-align: center;">10:30 - 11:15</td>
                   <td style="text-align: center;">Toma de decisiones empresariales</td>
                   <td style="text-align: center;">Daniel Fortuna</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 1</td>
+                  <td style="text-align: center;" class="vertical">Charla 1</td>
                   <td style="text-align: center;">14:30 - 14:50</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
@@ -258,7 +275,7 @@
                   <td style="text-align: center;">Sergio Hernández</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 2</td>
+                  <td style="text-align: center;" class="vertical">Charla 2</td>
                   <td style="text-align: center;">14:50 - 15:10</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
@@ -266,7 +283,7 @@
                   <td style="text-align: center;">Josefina Lacasa</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 3</td>
+                  <td style="text-align: center;" class="vertical">Charla 3</td>
                   <td style="text-align: center;">15:10 - 15:30</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
@@ -274,7 +291,7 @@
                   <td style="text-align: center;">Yasmín Navarrete</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 4</td>
+                  <td style="text-align: center;" class="vertical">Charla 4</td>
                   <td style="text-align: center;">17:15 - 17:35</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
@@ -282,15 +299,15 @@
                   <td style="text-align: center;">Llerzy Torres Ome</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 5</td>
+                  <td style="text-align: center;" class="vertical">Charla 5</td>
                   <td style="text-align: center;">17:35 - 17:55</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
-                  <td style="text-align: center;">Detección de especies mediante métodos bayesianos.</td>
+                  <td style="text-align: center;">Rediseño de paisajes agrícolas multifuncionales basado en redes bayesianas para la provisión de servicios ecosistémticos</td>
                   <td style="text-align: center;">Andrea Goijman</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 6</td>
+                  <td style="text-align: center;" class="vertical">Charla 6</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">14:30 - 14:50</td>
                   <td style="text-align: center;">-</td>
@@ -298,7 +315,7 @@
                   <td style="text-align: center;">Sergio Davis</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 7</td>
+                  <td style="text-align: center;" class="vertical">Charla 7</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">14:50 - 15:10</td>
                   <td style="text-align: center;">-</td>
@@ -306,7 +323,7 @@
                   <td style="text-align: center;">Rafael Tovar Cuevas</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 8</td>
+                  <td style="text-align: center;" class="vertical">Charla 8</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">15:10 - 15:30</td>
                   <td style="text-align: center;">-</td>
@@ -314,7 +331,7 @@
                   <td style="text-align: center;">Oxana Krimina</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 9</td>
+                  <td style="text-align: center;" class="vertical">Charla 9</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">17:15 - 17:35</td>
                   <td style="text-align: center;">-</td>
@@ -322,7 +339,7 @@
                   <td style="text-align: center;">Francisco Ortega-Culaciati</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Talk 10</td>
+                  <td style="text-align: center;" class="vertical">Charla 10</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">17:35 - 17:55</td>
                   <td style="text-align: center;">-</td>
@@ -330,31 +347,31 @@
                   <td style="text-align: center;">Macarena Piaggio</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Poster talks</td>
+                  <td style="text-align: center;" class="vertical">Charlas de póster</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">11:15 - 11:45</td>
-                  <td style="text-align: center;">Quick poster talks</td>
-                  <td style="text-align: center;">Several persons</td>
+                  <td style="text-align: center;">Charlas rápidas de pósters</td>
+                  <td style="text-align: center;">Varias personas</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Lunch</td>
+                  <td style="text-align: center;" class="vertical">Almuerzo</td>
                   <td style="text-align: center;">13:00 - 13:45</td>
                   <td style="text-align: center;">13:00 - 13:45</td>
                   <td style="text-align: center;">13:00 - 13:45</td>
-                  <td style="text-align: center;">-</td>
+                  <td style="text-align: center;"></td>
                   <td style="text-align: center;">-</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Poster</td>
-                  <td style="text-align: center;">13:45 - 14:00</td>
-                  <td style="text-align: center;">13:45 - 14:00</td>
-                  <td style="text-align: center;">13:45 - 14:00</td>
+                  <td style="text-align: center;" class="vertical">Póster</td>
+                  <td style="text-align: center;">16:00 - 16:15</td>
+                  <td style="text-align: center;">16:00 - 16:15</td>
+                  <td style="text-align: center;">16:00 - 16:15</td>
                   <td style="text-align: center;">Sesión de pósters</td>
                   <td style="text-align: center;">Varias personas</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Round Table</td>
+                  <td style="text-align: center;" class="vertical">Mesa Debate</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">16:15 - 17:45</td>
@@ -362,36 +379,36 @@
                   <td style="text-align: center;">Fernando Roberto Momo</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Groups 2</td>
-                  <td style="text-align: center;">14:00 - 14:30</td>
+                  <td style="text-align: center;" class="vertical">Grupos 2</td>
+                  <td style="text-align: center;">13:45 - 14:30</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">Ideas: "Por qué construir la comunidad Bayes Plurinacional"</td>
-                  <td style="text-align: center;">Random’ groups of 6</td>
+                  <td style="text-align: center;">Grupos de 6 al "azar"</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Groups 3</td>
+                  <td style="text-align: center;" class="vertical">Grupos 3</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">9:45 - 10:15</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">Ideas: "Para qué construir la comunidad Bayes Plurinacional"</td>
-                  <td style="text-align: center;">Random’ groups of 6</td>
+                  <td style="text-align: center;">Grupos de 6 al "azar"</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">Groups 4</td>
+                  <td style="text-align: center;" class="vertical">Grupos 4</td>
                   <td style="text-align: center;">-</td>
-                  <td style="text-align: center;">14:00 - 14:30</td>
+                  <td style="text-align: center;">13:45 - 14:30</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">Ideas: "Cómo construir la comunidad Bayes Plurinacional"</td>
-                  <td style="text-align: center;">Random’ groups of 6</td>
+                  <td style="text-align: center;">Grupos de 6 al "azar"</td>
               </tr>
               <tr>
-                  <td style="text-align: center;" class="vertical">ASSAMBLY</td>
+                  <td style="text-align: center;" class="vertical">ASAMBLEA</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
-                  <td style="text-align: center;">14:00 - 14:30</td>
+                  <td style="text-align: center;">13:45 - 14:30</td>
                   <td style="text-align: center;">Conclusiones: “Acciones a futuro”</td>
-                  <td style="text-align: center;">General Assambly</td>
+                  <td style="text-align: center;">Asamblea General</td>
               </tr>
           </table>
 
