--- a/es/cronograma.html
+++ b/es/cronograma.html
@@ -148,7 +148,7 @@
                 Durante el Congreso Bayes Plurinacional 2023 se propuso como objetivo fortalecer la oferta de formación en investigación y/o aplicación de la inferencia bayesiana, mediante el desarrollo de talleres dictados por especialistas de nuestra región, dando origen a la creación de la Escuela-Congreso Bayes Plurinacional 2024.
                 La Escuela-Congreso Bayes Plurinacional 2024, se realizará en la Universidad Nacional de Salta, Argentina.
                 Durante 3 días (martes 6 al jueves 8) compartiremos diversas actividades, entre las que se incluyen varios talleres prácticos de todos los niveles, exposiciones, mesa de debate, sesiones de pósters, entre otras.
-                El día viernes realizaremos actividades turísticas en la ciudad de Salta.
+                El viernes por la mañana realizaremos actividades de co-working y por la tarde actividades sociales en la ciudad de Salta.
                 <!--Registra t propuesta para la Escuela-Congreso Bayes Plurinacional 2024 <a href="https://bayesplurinacional.org/link/InscripcionSalta2024.html"><b>aquí</b></a>.
                 Tenés tiempo hasta el 30 de abril.
                 Para proponer eventos virtuales, acceda de forma permanente al siguiente <a href="https://bayesplurinacional.org/link/InscripcionEventosVirtuales.html">formulario</a>.-->
@@ -253,7 +253,7 @@
                   <td style="text-align: center;" class="vertical">Charla con código</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
-                  <td style="text-align: center;">10:30 - 11:45</td>
+                  <td style="text-align: center;">10:30 - 11:15</td>
                   <td style="text-align: center;">Toma de decisiones empresariales</td>
                   <td style="text-align: center;">Daniel Fortuna</td>
               </tr>
@@ -294,7 +294,7 @@
                   <td style="text-align: center;">17:35 - 17:55</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
-                  <td style="text-align: center;">Detección de especies mediante métodos bayesianos.</td>
+                  <td style="text-align: center;">Rediseño de paisajes agrícolas multifuncionales basado en redes bayesianas para la provisión de servicios ecosistémticos</td>
                   <td style="text-align: center;">Andrea Goijman</td>
               </tr>
               <tr>
@@ -355,9 +355,9 @@
               </tr>
               <tr>
                   <td style="text-align: center;" class="vertical">Póster</td>
-                  <td style="text-align: center;">13:45 - 14:00</td>
-                  <td style="text-align: center;">13:45 - 14:00</td>
-                  <td style="text-align: center;">13:45 - 14:00</td>
+                  <td style="text-align: center;">16:00 - 16:15</td>
+                  <td style="text-align: center;">16:00 - 16:15</td>
+                  <td style="text-align: center;">16:00 - 16:15</td>
                   <td style="text-align: center;">Sesión de pósters</td>
                   <td style="text-align: center;">Varias personas</td>
               </tr>
@@ -371,7 +371,7 @@
               </tr>
               <tr>
                   <td style="text-align: center;" class="vertical">Grupos 2</td>
-                  <td style="text-align: center;">14:00 - 14:30</td>
+                  <td style="text-align: center;">13:45 - 14:30</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">Ideas: "Por qué construir la comunidad Bayes Plurinacional"</td>
@@ -388,7 +388,7 @@
               <tr>
                   <td style="text-align: center;" class="vertical">Grupos 4</td>
                   <td style="text-align: center;">-</td>
-                  <td style="text-align: center;">14:00 - 14:30</td>
+                  <td style="text-align: center;">13:45 - 14:30</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">Ideas: "Cómo construir la comunidad Bayes Plurinacional"</td>
                   <td style="text-align: center;">Grupos de 6 al "azar"</td>
@@ -397,7 +397,7 @@
                   <td style="text-align: center;" class="vertical">ASAMBLEA</td>
                   <td style="text-align: center;">-</td>
                   <td style="text-align: center;">-</td>
-                  <td style="text-align: center;">14:00 - 14:30</td>
+                  <td style="text-align: center;">13:45 - 14:30</td>
                   <td style="text-align: center;">Conclusiones: “Acciones a futuro”</td>
                   <td style="text-align: center;">Asamblea General</td>
               </tr>
