--- a/en/speakers.html
+++ b/en/speakers.html
@@ -162,7 +162,7 @@
                 <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
                     <h5 style="margin-bottom: -3%;"><p>Camila Neder</p></h5>
                     <!--<h6><p>Host</p></h6>-->
-                    <p>Ph.D. in Biological Sciences and expert in Marine Ecology, she has researched Antarctic benthos and its response to climate change, with multiple international publications and awards. She has collaborated with the Alfred Wegener Institute, participated in Antarctic expeditions, and is skilled in spatial analysis and scientific communication in several languages.
+                    <p>PhD in Biological Sciences specializing in Marine Ecology from the National University of Córdoba. She researches Antarctic benthos and its response to climate change (CONICET-IDEA), with multiple publications and international scholarships. She has participated in Antarctic expeditions and is skilled in spatial analysis and scientific communication in various languages.
                     </p>
                 </div>
                 </div>
