--- a/es/disertantes.html
+++ b/es/disertantes.html
@@ -163,7 +163,7 @@
                 <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
                     <h5 style="margin-bottom: -3%;"><p>Camila Neder</p></h5>
                     <!--<h6><p>Anfitriona</p></h6>-->
-                    <p>Doctora en Ciencias Biológicas y experta en Ecología Marina, ha investigado el bentos antártico y su respuesta al cambio climático, con múltiples publicaciones y premios internacionales. Ha colaborado con el Alfred Wegener Institute, participado en expediciones antárticas y es hábil en análisis espacial y comunicación científica en varios idiomas.
+                    <p>Doctora en Ciencias Biológicas especialidad Ecología Marina, Universidad Nacional de Córdoba. Investiga el bentos antártico y su respuesta al cambio climático (CONICET-IDEA), con múltiples publicaciones y becas internacionales. Ha participado en expediciones antárticas, es hábil en análisis espacial y comunicación científica en varios idiomas.
                     </p>
                 </div>
                 </div>
