--- a/en/organize.html
+++ b/en/organize.html
@@ -148,14 +148,21 @@
 
                 <div class="column">
                     <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
-                    <h5><p>Gustavo Landfried</p></h5>
-                    <h6><p>Coordinator 2024 Plurinational Bayes</p></h6>
+                    <h5><p>Camila Neder</p></h5>
+                    <h6><p>Coordinator 1 Plurinational Bayes 2024</p></h6>
                 </div>
 
                <div class="column">
 		                <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
 		                <h5><p>Andrea Goijman</p></h5>
-		                <h6><p>Vice-coordinator 2024 Bayes Plurinacional</p></h6>
+		                <h6><p>Coordinator 2 Plurinational Bayes 2024</p></h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <!--<p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>-->
+                    <h5><p>Gustavo Landfried</p></h5>
+                    <h6><p>General Director Plurinational Bayes 2024</p></h6>
                 </div>
 
                 <div class="column">
@@ -183,13 +190,13 @@
             <ul>
                 <h6><b>On-site Event</b> team:</h6>
                 <li>&#x2022; Responsible: Ariel Silvio Norberto Ramos, Gustavo Landfried.</li>
-                <li>&#x2022; Main collaborators: Andrea Goijman, Ariel Salgado, Camila Nader, Luciano Moffatt, Ana Verónica Scotta.</li>
+                <li>&#x2022; Main collaborators: Andrea Goijman, Ariel Salgado, Camila Neder, Luciano Moffatt, Ana Verónica Scotta.</li>
             </ul>
 
             <ul>
                 <h6><b>Virtual Events</b> team:</h6>
                 <li>&#x2022; Responsible: Ariel Salgado, Luciano Moffatt. </li>
-                <li>&#x2022; Main collaborators: Ana Verónica Scotta, Camila Nader, Noelia Arguelles, Matias Leizerovich.</li>
+                <li>&#x2022; Main collaborators: Ana Verónica Scotta, Camila Neder, Noelia Arguelles, Matias Leizerovich.</li>
             </ul>
 
             <ul>
@@ -212,7 +219,7 @@
                 <br>
                 1. Sergio M. Davis Irrazabal (Física, Comisión Chilena de Energía Atómica, Santiago, Chile)
                 <br>
-                2. Gustavo A. Landfried (Antropología, Departamento de Computación-UBA, Buenos Aires, Argentina)
+                2. Gustavo A. Landfried (Antropología, Doctor en Computación, Departamento de Computación-UBA, Buenos Aires, Argentina)
                 <br>
                 3. Andrea P. Goijman (Ecología, INTA EEA La Consulta, Mendoza, Argentina)
                 <br>
