--- a/es/organiza.html
+++ b/es/organiza.html
@@ -153,24 +153,27 @@
             <div class="row">
                <div class="column">
 		                <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
-		                <h5><p>Gustavo Landfried</p></h5>
-		                <h6><p>Coordinador 2024 Bayes Plurinacional</p></h6>
+		                <h5><p>Camila Neder</p></h5>
+		                <h6><p>Coordinadora 1 Bayes Plurinacional 2024</p></h6>
                 </div>
 
                <div class="column">
 		                <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
 		                <h5><p>Andrea Goijman</p></h5>
-		                <h6><p>Vice-coordinadora 2024 Bayes Plurinacional</p></h6>
+		                <h6><p>Coordinadora 2 Bayes Plurinacional 2024</p></h6>
                 </div>
-
+            </div>
+            <div class="row">
                 <div class="column">
+                    <h5><p>Gustavo Landfried</p></h5>
+		                <h6><p>Director General Bayes Plurinacional 2024</p></h6>
+                </div>
                     <!--<p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>-->
+                <div class="column">
                     <h5><p>Universidad Nacional de Salta</p></h5>
                     <h6><p>Anfitrión 2024</p></h6>
                 </div>
             </div>
-
-
         </div>
 
         <br>
@@ -196,14 +199,14 @@
                 <ul>
                 <h6>Equipo <b>Evento presencial</b>:</h6>
                     <li>&#x2022; Responsables: Ariel Silvio Norberto Ramos, Gustavo Landfried.</li>
-                    <li>&#x2022; Principales colaboradores: Andrea Goijman, Ariel Salgado, Camila Nader, Luciano Moffatt, Ana Verónica Scotta.</li>
+                    <li>&#x2022; Principales colaboradores: Andrea Goijman, Ariel Salgado, Camila Neder, Luciano Moffatt, Ana Verónica Scotta.</li>
                 </ul>
 
 
                 <ul>
                 <h6>Equipo <b>Eventos virtuales</b>:</h6>
                     <li>&#x2022; Responsables: Ariel Salgado, Luciano Moffatt. </li>
-                    <li>&#x2022; Principales colaboradores: Ana Verónica Scotta, Camila Nader, Noelia Arguelles, Matias Leizerovich.</li>
+                    <li>&#x2022; Principales colaboradores: Ana Verónica Scotta, Camila Neder, Noelia Arguelles, Matias Leizerovich.</li>
                 </ul>
 
 
@@ -226,7 +229,7 @@
                 <br>
                 1. Sergio M. Davis Irrazabal (Física, Comisión Chilena de Energía Atómica, Santiago, Chile)
                 <br>
-                2. Gustavo A. Landfried (Antropología, Departamento de Computación-UBA, Buenos Aires, Argentina)
+                2. Gustavo A. Landfried (Antropología, Doctor en Computación, Departamento de Computación-UBA, Buenos Aires, Argentina)
                 <br>
                 3. Andrea P. Goijman (Ecología, INTA EEA La Consulta, Mendoza, Argentina)
                 <br>
