--- a/link/VideoConferencia.html
+++ b/link/VideoConferencia.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="0; url=meet.google.com/dew-dorc-fqa">
+<meta http-equiv="refresh" content="0; url=https://meet.google.com/dew-dorc-fqa">
 <!--meet.google.com/dew-dorc-fqa-->
 <!--https://meet.jit.si/BayesPlurinacional-->
 <!--https://us02web.zoom.us/j/6951169976?pwd=K3l3clBMYnM5RkFHdlZZQ3RjcWs0UT09-->
